# Blind-Assistance

./: .gitignore  CMakeLists.txt  face_detection.cpp  video_input.cpp
Documentation/Presentation/: presentation.tex  references.bib
Documentation/Proposal/: proposal.tex  references.bib
Documentation/Report/: frontmatter.tex  preamble.tex  report.tex  sectionAbstract.tex  sectionAcknowledgements.tex
Documentation/Report/Chapter1/: chapterIntroduction.tex
Documentation/Report/Chapter2/: chapterLiteratureReview.tex
